--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <p class="hero__paragraph">Planeje com Modelos Preditivos tolerante ao risco.
                         As melhores ações para comprar hoje podem não ser as
                         mesmas amanhã ou daqui a algumas semanas. </p>
-            <a href="" class="cta">Comença Agora</a>
+            <a href="" class="cta">Començar Agora</a>
 
         </section>
 
