--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Inicio</a>
+                    <a href="login.html" class="nav__links">Inicio</a>
                 </li>
                 <li class="nav__items">
                     <a href="https://br.investing.com/equities/brazil" class="nav__links" alt="Mercado de Ações do Brasil | Cotações Hoje - Investing.com" >Ações do Brasil</a>
@@ -65,7 +65,7 @@
             <p class="hero__paragraph">Planeje com Modelos Preditivos tolerante ao risco.
                         As melhores ações para comprar hoje podem não ser as
                         mesmas amanhã ou daqui a algumas semanas. </p>
-            <a href="" class="cta">Començar Agora</a>
+            <a class="cta" onclick="rediretion()">Començar Agora</a>
 
         </section>
 
@@ -103,7 +103,7 @@
                 <div class="knowledege__texts">
                     <h2 class="subtitle">¡PREDIC TO FINANCE! Modelo Preditivo. </h2>
                     <p class="knowledge__paragraph">Previsões de flutuações do mercado de ações, com base nas informações que possemos do presente e do passado sobre qualquer ação. Um palpite estimado de movimentos e padrões, que envolve o uso de redes neurais artificiais e análise algoritmos matemáticos, para prever a direção do preço de uma ação. </p>
-                    <a href="#" class="cta">Entra ao Futuro Hoje</a>
+                    <a href="#" class="cta" onclick="rediretion()">Entra ao Futuro Hoje</a>
                 </div>
 
                 <figure class="knowledge__picture">
@@ -126,7 +126,7 @@
                         <p class="price__features">1 tag acão </p>
                     </div>
 
-                    <a href="#" class="price__cta">Contrate Agora</a>
+                    <a onclick="rediretion()" class="price__cta">Contrate Agora</a>
                 </div>
 
 
@@ -140,7 +140,7 @@
                         <p class="price__features">3 tag ação</p>
                     </div>
 
-                    <a href="#" class="price__cta">Contrate Agora</a>
+                    <a onclick="rediretion()" class="price__cta">Contrate Agora</a>
                 </div>
 
 
@@ -154,7 +154,7 @@
                         <p class="price__features">Ilimitado</p>
                     </div>
 
-                    <a href="#" class="price__cta">Contrate Agora</a>
+                    <a onclick="rediretion()" class="price__cta">Contrate Agora</a>
                 </div>
 
 
@@ -261,7 +261,7 @@
             <section class="questions__offer">
                 <h2 class="subtitle">¿Estas listo para o Futuro?</h2>
                 <p class="questions__copy">Com fato de ter conhecimento do que está por vir, significa poder realizar investimentos com bajo margem de risco. Automatizar tarefas de monitoramento de ações, alimentada por tecnologia avançada, com um modelo algorítmico e matemático criado para detectar padrões em tempo real.</p>
-                <a href="#" class="cta">Contrate Agora</a>
+                <a onclick="rediretion()" class="cta">Contrate Agora</a>
             </section>
         </section>
     </main>
@@ -310,6 +310,8 @@
     <script src="./js/slider.js"></script>
     <script src="./js/questions.js"></script>
     <script src="./js/menu.js"></script>
+    <script src="./js/dirigir.js"></script>
+
 
     
 
